--- a/visualitzacio_exploratoria.ipynb
+++ b/visualitzacio_exploratoria.ipynb
@@ -1708,7 +1708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1726,7 +1726,7 @@
     "df.boxplot(column=['Preu_mensual'], by='Nom_Districte', figsize=(15,10))\n",
     "plt.suptitle('Distribució preus lloguers per districte', size=20, weight='bold')\n",
     "plt.title('')\n",
-    "plt.savefig('Distribució_preu_districtes')\n",
+    "plt.savefig('Distribucio_preu_districtes')\n",
     "plt.show()"
    ]
   },
